applications/istio/istioingress-bookinfo/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: main-routing
spec:
  hosts:
  - "*"

  gateways:
  - bookinfo-gateway

  http:

  # ArgoCD first
  - match:
    - uri:
        prefix: /argocd

    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80

  # Everything else -> Bookinfo
  - match:
    - uri:
        prefix: /

    route:
    - destination:
        host: productpage
        port:
          number: 9080
